# confirmacao_consultas_tasy

./: .dockerignore  .env.backup  .gitignore  Dockerfile  IMPLEMENTACOES_COMPLETADAS.md  Makefile  README-INSTALACAO.md  README.md  README_IMPLEMENTACAO.md  backup_atendimentos.txt  docker-compose.yml  e --continue  env.docker  env.example  init-firebird.sql  init-oracle.sql  init-postgresql.sql  init.sql  install.bat  install.sh  requirements.txt  setup-docker.sh  test_webhook.py  teste_oracle.py
app/: main.py  scheduler.py
app/api/routes/: botconversa_test.py  webhook.py
app/config/: config.py
app/database/: __init__.py  adapter.py  manager.py  models.py  sqlite_envios.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  agenda_consulta_update_service.py  botconversa_service.py  consulta_service.py  envios_lembrete_service.py  lembretes_view_service.py  paciente_service.py  view_confirmacao_service.py  webhook_service.py
app/utils/: telefone.py
cli/: README.md  __init__.py  __main__.py  cli.py  pyproject.toml
cli/commands/: __init__.py  botconversa.py  database.py
docs/: README.md  TECHNICAL.md  analise_requisitos_f002.2.md  development_guide.md  fluxo_botconversa_consultas.md  multi_database_implementation_summary.md  multi_database_setup.md  teste_botconversa_insomnia.md  webhook_n8n_guide.md
scripts/: __init__.py  add_test_data.py  init_db.py  test_connection.bat  test_connection.py
